--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -5,7 +5,7 @@ import { getEntryCTM } from "@/lib/contentParser.astro";
 import { generatePaths } from "@/lib/utils/i18nUtils";
 import FaqSection from "@/components/sections/FaqSection.astro";
 import HomeBanner from "@/components/sections/HomeBanner.astro";
-import Features from "@/components/sections/FeaturesSection.astro";
+import OurValue from "@/components/sections/OurValue.astro";
 import CallToAction from "@/components/sections/CallToAction.astro";
 import PricingSection from "@/components/sections/PricingSection.astro";
 import IntegrationSection from "@/components/sections/IntegrationSection.astro";
@@ -20,7 +20,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
 
 <Base {...homepage.data}>
   <HomeBanner />
-  <Features />
+  <OurValue />
   <WhyUs />
   <PricingSection />
   <TestimonialSection />
