--- a/src/layouts/components/cards/ValueCard.astro
+++ b/src/layouts/components/cards/ValueCard.astro
@@ -3,6 +3,12 @@ import { markdownify } from "@/lib/utils/textConverter";
 import OptimizedImage from "../utilities/OptimizedImage.astro";
 
 // TODO: fix types, add tooltip or note, icons, delete unneeded files
+interface Props {
+  title: string;
+  description: string;
+  image?: string;
+}
+
 const { title, description, image } = Astro.props;
 ---
 
