add fineprint to value section

--- a/src/layouts/components/cards/ValueCard.astro
+++ b/src/layouts/components/cards/ValueCard.astro
@@ -2,7 +2,7 @@
 import { markdownify } from "@/lib/utils/textConverter";
 import OptimizedImage from "../utilities/OptimizedImage.astro";
 
-// TODO: fix types, add tooltip or note, icons, delete unneeded files
+// TODO: add icons
 interface Props {
   title: string;
   description: string;
