--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -11,6 +11,7 @@ type ourValueSectionType = Section & {
   list: {
     title: string;
     description: string;
+    icon?: string,
   }[];
   fineprint?: string;
 };
