--- a/src/layouts/components/cards/ValueCard.astro
+++ b/src/layouts/components/cards/ValueCard.astro
@@ -2,26 +2,25 @@
 import { markdownify } from "@/lib/utils/textConverter";
 import OptimizedImage from "../utilities/OptimizedImage.astro";
 
-// TODO: add icons
 interface Props {
   title: string;
   description: string;
-  image?: string;
+  icon?: string;
 }
 
-const { title, description, image } = Astro.props;
+const { title, description, icon } = Astro.props;
 ---
 
 <div
   class="border-primary/30 hover:bg-accent relative space-y-8 rounded-lg border p-5 transition-colors duration-300">
   <div class="flex items-center gap-4">
     {
-      image && (
+      icon && (
         <OptimizedImage
           width={48}
           height={48}
           class="bg-primary/10 h-12 w-12 rounded-sm"
-          src={image}
+          src={icon}
           alt={`Related to ${title}`}
         />
       )
