remove redundant code

--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -4,42 +4,28 @@ import { markdownify } from "@/lib/utils/textConverter";
 import type { Button, Section } from "@/types";
 import OptimizedImage from "@/components/utilities/OptimizedImage.astro";
 import { getEntryCTM } from "@/lib/contentParser.astro";
-import Customers from "./Customers.astro";
-import { plainify } from "@/lib/utils/textConverter";
 import ButtonLink from "../buttons/ButtonLink.astro";
-import VideoModal from "../widgets/VideoModal.astro";
 import AnimatedText from "../widgets/AnimatedText.astro";
-import type { customersSectionType } from "@/types";
 
-// Type for this section data
 type homeBannerSectionType = Section & {
-  buttons: Button[];
-  customers: customersSectionType;
+  button: Button;
 };
 
 type Props = {
   content?: homeBannerSectionType;
 };
 
-// Fetching the default content for the this section
 let defaultContent = (
   await getEntryCTM("sections", "home-banner", Astro.currentLocale)
 )?.data as homeBannerSectionType;
 
-// Enables content customization (e.g., title, description) with a fallback to 'defaultContent' if not provided.
-// The 'content' prop should match the structure of 'defaultContent'.
-// Allows using this section with different content across multiple pages.
-// If 'content' is missing, 'defaultContent' will be used.
 let actualContent = overrideObjects(
   { ...defaultContent },
   Astro.props.content,
 ) as homeBannerSectionType;
 
-// Extracting required values from 'content' object
-let { title, customers, description, image, buttons } =
-  actualContent as homeBannerSectionType;
+let { title, description, button } = actualContent as homeBannerSectionType;
 
-const videoButton = buttons.find((button) => button.type === "video");
 ---
 
 <section>
@@ -65,6 +51,14 @@ const videoButton = buttons.find((button) => button.type === "video");
               />
             )
           }
+          {
+            description && (
+              <p
+                class="shrink-0 text-center text-xs tracking-wider opacity-80"
+                set:html={markdownify(description)}
+              />
+            )
+          }
         </div>
         <div
           data-aos="fade-in"
@@ -72,85 +66,22 @@ const videoButton = buttons.find((button) => button.type === "video");
           data-aos-duration="900"
           class="has-video-modal flex flex-wrap items-center justify-center gap-5">
           {
-            buttons &&
-              buttons.map((button: Button) =>
-                button.type !== "video" ? (
-                  <ButtonLink
-                    content={button}
-                    class="btn-md btn-primary btn-has-icon group relative z-0 flex items-center gap-4 [&>.label]:z-20">
-                    <span class="flex h-6 w-12 items-center justify-center rounded-full bg-white/15">
-                      <OptimizedImage
-                        alt="icon"
-                        class="h-5 w-5 transition-all duration-300 group-hover:rotate-180"
-                        src="/images/icons/svg/star.svg"
-                      />
-                    </span>
-                  </ButtonLink>
-                ) : (
-                  <ButtonLink
-                    tag={"button"}
-                    content={button}
-                    type="button"
-                    title="Play Video"
-                    aria-haspopup="dialog"
-                    aria-expanded="false"
-                    aria-controls={"#" + button.video?.id}
-                    data-hs-overlay={"#" + button.video?.id}
-                    data-hs-overlay-options={`{"emulateScrollbarSpace" : true}`}
-                    class="video-modal-toggle btn-md btn-primary btn-has-icon group after:bg-primary/25 relative z-0 flex items-center gap-4 after:pointer-events-none after:absolute after:inset-0 after:z-10 after:size-full [&>.label]:z-20">
-                    <span class="has-animated-waves waves-white waves-sm relative z-20 flex h-6 w-6 items-center justify-center rounded-full">
-                      <OptimizedImage
-                        alt="icon"
-                        inlineSvg={true}
-                        class="text-primary ml-px h-2 w-2"
-                        src="/images/icons/svg/play-icon.svg"
-                      />
-                    </span>
-
-                    {/* Background Images */}
-                    {button?.video?.src && (
-                      <video
-                        autoplay
-                        muted
-                        loop
-                        playsinline
-                        class="absolute top-0 left-0 z-0 z-10 h-full w-full object-cover"
-                        {...{
-                          src: button?.video?.src.startsWith("http")
-                            ? button?.video?.src
-                            : null,
-                        }}>
-                        {!button?.video?.src.startsWith("http") && (
-                          <source src={button?.video?.src} type="video/mp4" />
-                        )}
-                        Your browser does not support the video tag.
-                      </video>
-                    )}
-                  </ButtonLink>
-                ),
-              )
+            button && (
+              <ButtonLink
+                content={button}
+                class="btn-md btn-primary btn-has-icon group relative z-0 flex items-center gap-4 [&>.label]:z-20">
+                <span class="flex h-6 w-12 items-center justify-center rounded-full bg-white/15">
+                  <OptimizedImage
+                    alt="icon"
+                    class="h-5 w-5 transition-all duration-300 group-hover:rotate-180"
+                    src="/images/icons/svg/star.svg"
+                  />
+                </span>
+              </ButtonLink>
+            )
           }
         </div>
-
-        <Customers
-          content={customers}
-          data-aos-delay="600"
-          data-aos-duration="900"
-          data-aos="fade-in"
-        />
       </div>
     </div>
   </div>
-
-  {
-    videoButton && (
-      <VideoModal
-        video={{
-          id: videoButton.video?.id,
-          src: videoButton.video?.src,
-          provider: videoButton.video?.provider,
-        }}
-      />
-    )
-  }
 </section>
