--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -27,23 +27,29 @@ type Props = JSONLDProps & {
   disableTagline?: boolean;
   structuredData?: Props;
   sectionSpacing?: "md" | "lg";
+  heroBackground?: {
+    src?: string,
+  };
 };
 
-// destructure frontmatter
-let { sectionSpacing = "lg", structuredData } = Astro.props;
+let { sectionSpacing = "lg", structuredData, heroBackground } = Astro.props;
 
-// Exclude empty key value weather it may empty string, object or array from Astro.props
 let props = removeEmptyKeys(Astro.props);
 
-// Section spacing class
 const sectionSpacingClass =
   sectionSpacing === "md" ? "has-section-spacing-md" : "has-section-spacing-lg";
+
+const heroBgSrc = heroBackground ? heroBackground.src : '';
+const wrapperClass = heroBackground ? "bg-cover bg-center" : "";
+const wrapperStyle = heroBackground
+  ? `background-image: url("${heroBgSrc}");`
+  : undefined;
 ---
 
 <!doctype html>
 <html lang={config.settings.multilingual.defaultLanguage || "en"}>
   <Head {...props} structuredData={structuredData} />
-  <body>
+  <body class={wrapperClass} style={wrapperStyle}>
     {!Astro.props.homepage && <PageLoader />}
     <Header {...props} />
     <main class:list={[sectionSpacingClass, Astro.props.class]}>
@@ -53,6 +59,5 @@ const sectionSpacingClass =
 
     <GlobalScripts />
     <BreakpointIndicator />
-
   </body>
 </html>
