--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -25,62 +25,59 @@ let actualContent = overrideObjects(
 ) as homeBannerSectionType;
 
 let { title, description, button } = actualContent as homeBannerSectionType;
-
 ---
 
 <section>
-  <div class="banner-gradient stretched-link relative">
-    <div class="container">
-      <div class="relative z-10 mx-auto max-w-4xl space-y-10">
-        <div>
-          {
-            title && (
-              <AnimatedText
-                class="has-italic-text font-secondary mb-6 text-center text-5xl text-white capitalize md:text-7xl/tight"
-                content={markdownify(title)}
-              />
-            )
-          }
-          {
-            description && (
-              <AnimatedText
-                class="text-center text-lg/normal"
-                stagger={0.03}
-                delay={0.3}
-                content={markdownify(description)}
-              />
-            )
-          }
-          {
-            description && (
-              <p
-                class="shrink-0 text-center text-xs tracking-wider opacity-80"
-                set:html={markdownify(description)}
-              />
-            )
-          }
-        </div>
-        <div
-          data-aos="fade-in"
-          data-aos-delay="400"
-          data-aos-duration="900"
-          class="has-video-modal flex flex-wrap items-center justify-center gap-5">
-          {
-            button && (
-              <ButtonLink
-                content={button}
-                class="btn-md btn-primary btn-has-icon group relative z-0 flex items-center gap-4 [&>.label]:z-20">
-                <span class="flex h-6 w-12 items-center justify-center rounded-full bg-white/15">
-                  <OptimizedImage
-                    alt="icon"
-                    class="h-5 w-5 transition-all duration-300 group-hover:rotate-180"
-                    src="/images/icons/svg/star.svg"
-                  />
-                </span>
-              </ButtonLink>
-            )
-          }
-        </div>
+  <div class="container">
+    <div class="relative z-10 mx-auto max-w-4xl space-y-10">
+      <div>
+        {
+          title && (
+            <AnimatedText
+              class="has-italic-text font-secondary mb-6 text-center text-5xl text-white capitalize md:text-7xl/tight"
+              content={markdownify(title)}
+            />
+          )
+        }
+        {
+          description && (
+            <AnimatedText
+              class="text-center text-lg/normal"
+              stagger={0.03}
+              delay={0.3}
+              content={markdownify(description)}
+            />
+          )
+        }
+        {
+          description && (
+            <p
+              class="shrink-0 text-center text-xs tracking-wider opacity-80"
+              set:html={markdownify(description)}
+            />
+          )
+        }
+      </div>
+      <div
+        data-aos="fade-in"
+        data-aos-delay="400"
+        data-aos-duration="900"
+        class="flex flex-wrap items-center justify-center gap-5">
+        {
+          button && (
+            <ButtonLink
+              content={button}
+              class="btn-md btn-primary btn-has-icon group relative z-0 flex items-center gap-4 [&>.label]:z-20">
+              <span class="flex h-6 w-12 items-center justify-center rounded-full bg-white/15">
+                <OptimizedImage
+                  alt="icon"
+                  class="h-5 w-5 transition-all duration-300 group-hover:rotate-180"
+                  src="/images/icons/svg/star.svg"
+                />
+              </span>
+            </ButtonLink>
+          )
+        }
       </div>
     </div>
   </div>
