--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -15,9 +15,10 @@ export function getStaticPaths() {
 }
 
 const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
+const background = '/images/hero/background.jpg';
 ---
 
-<Base {...homepage.data}>
+<Base {...homepage.data} heroBackground={{src: background}}>
   <HomeBanner />
   <OurValue />
   <WhyUs />
