--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -12,8 +12,9 @@ type ourValueSectionType = Section & {
     description: string;
     icon?: string,
   }[];
-  fineprint?: string;
+  fineprint?: string,
 };
+
 type Props = {
   content?: ourValueSectionType;
 };
