--- a/src/layouts/components/sections/FaqSection.astro
+++ b/src/layouts/components/sections/FaqSection.astro
@@ -49,7 +49,7 @@ if (!showCategories) {
 
 {
   enable && (
-    <section>
+    <section id="faq">
       <div class="container">
         <div class="space-y-12 md:space-y-16">
           <div class="mx-auto max-w-2xl text-center" data-aos="fade-up-sm">
