--- a/src/pages/case-studies/[slug].astro
+++ b/src/pages/case-studies/[slug].astro
@@ -1,12 +1,10 @@
 ---
+import CaseStudyLayout from "@/layouts/CaseStudyLayout.astro";
 import { getCollection } from "astro:content";
-import Layout from "@/layouts/Base.astro";
-import CaseStudyHero from "@/layouts/components/cards/CaseStudyHero.astro";
-import CaseStudyDetails from "@/layouts/components/cards/CaseStudyDetails.astro";
-import ButtonLink from "@/layouts/components/buttons/ButtonLink.astro";
 
 export async function getStaticPaths() {
   const all = await getCollection("case-studies");
+
   return all.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry },
@@ -14,32 +12,6 @@ export async function getStaticPaths() {
 }
 
 const { entry } = Astro.props;
-const data = entry.data;
 ---
 
-<Layout title={data.title}>
-  <section class="relative z-10 container pt-24">
-    <ButtonLink
-      content={{
-        enable: true,
-        label: "Back to Pricing",
-        url: "/pricing",
-      }}
-      class="btn-primary"
-    />
-  </section>
-
-  <section class="container grid grid-cols-1 gap-16 py-20 md:grid-cols-2">
-    <CaseStudyHero title={data.title} category={data.category} />
-    <CaseStudyDetails
-      before={data.before}
-      after={data.after}
-      impact={data.impact}
-      client={data.client}
-      date={data.date}
-      category={data.category}
-      tools={data.tools}
-      website={data.website}
-    />
-  </section>
-</Layout>
+<CaseStudyLayout entry={entry} />
