--- a/src/layouts/components/global/header/Header.astro
+++ b/src/layouts/components/global/header/Header.astro
@@ -34,10 +34,10 @@ const {
 
 <header
   class:list={[
-    "header group/header transform",
+    "header group/header mt-5 transform",
     { "sticky-header": stickyHeader },
   ]}>
-  <div class="absolute container">
+  <div class="relative container">
     <nav
       class="hs-dropdown relative flex items-center justify-between px-2 py-2.5 [--auto-close:inside] [--gpu-acceleration:false] [--strategy:absolute] lg:[--strategy:static]">
       <Logo class={logoHoverAnimation ? "has-hover-animation" : ""} />
